--- a/english/word/low-frequency/013-018.md
+++ b/english/word/low-frequency/013-018.md
@@ -57,8 +57,8 @@
     - n. 排斥
     - An **exclusion** is an instance of leaving something or some out.
     - to the exclusion of 以排除...为代价/把...完全排除在外/只顾...而不顾...（只包括前者，不包括后者）
-    - If you love someone <ins>to the **exclusion** of</ins> all others, he or she is the only one for you!
-    - Dine had *dedicated(vt. 把...奉献给)* her life to caring for him <ins>to the **exclusion** of</ins> all else.
+    - If you love someone to the **exclusion** of all others, he or she is the only one for you!
+    - Dine had *dedicated(vt. 把...奉献给)* her life to caring for him to the **exclusion** of all else.
     - exclusionary adj. 排他的
     - inclusive adj. 包容性强的；包括的
 - deter [dɪˈtɜːr]
