--- a/english/word/low-frequency/055-060.md
+++ b/english/word/low-frequency/055-060.md
@@ -19,14 +19,17 @@
 
 ## 055
 
-- punctuation
+- punctuation [ˌpʌŋktʃuˈeɪʃn]
     - n. 标点符号
 - interdisciplinary
     - adj. 跨学科的
-    - self-disciplined 自律
+    - discipline [ˈdɪsəplɪn]
+        - v. 训练; 惩罚; 自我约束
+        - n. 自制力；学科；行为准则
+        - self-discipline 自制力
 - reductionism
     - n. 简化论
-- weave
+- weave [wiːv]
     - v. 编，织
 - unbalanced
     - adj. 失衡的
@@ -34,49 +37,215 @@
     - n. 导航
     - navy army 海军
     - navigate
-        - 导航；适应
-        - Many first-generation students "struggle to navigate the middle-class culture of higher education,learn the 'rules of the game,'and take advantage of college resources,"they write.
+        - vt. 导航；航行；找到正确方法（对付困难、复杂的情况）；驾驭，成功应付(困难处境)
+        - Many first-generation students "struggle to **navigate** the middle-class culture of higher education, learn
+          the 'rules of the game', and take advantage of college resources", they write.
+            - struggle to do sth. 努力去做某事/挣扎去做某事
+            - advantage n. 优势
+            - take advantage of 充分利用，善加利用；占...的便宜，利用（他人的弱点、困境）
+            - navigate + 抽象事物 navigate 本意*航行*，引申为*应对、处理（复杂或陌生的环境/系统）*
+                - navigate + 社会环境/文化/系统/bureaucracy
+                    - bureaucracy [bjʊˈrɑːkrəsi] n. 官僚制度; 官僚作风; 官僚主义
 - alternatively
-    - adv. 要不
-- periodically
+    - adv. 要不；或者
+- periodically [pɪrɪˈɑdɪklɪ]
     - adv. 定期地
-    - period 时期
+    - period [ˈpɪriəd]
+        - n. （一段）时间，时期
         - in the same period 在相同的时期
-- linguistic
+- linguistic [lɪŋˈɡwɪstɪk]
     - adj. 语言的
     - linguistics n. 语言学家
 
 ## 056
 
-- tedious
-    - adj. 冗长的，枯燥乏味的😔
-    - The lecture was mind-numbingly tedious.
-- ineffectiveness
-    - n. 无效
+- tedious [ˈtiːdiəs]
+    - adj. 冗长的，枯燥乏味的 😔
+    - The lecture was mind-numbingly **tedious**. 那堂课冗长乏味
+        - numbingly ['nʌmɪŋlɪ] adv. 使麻木地，使失去感觉地
+- inefficient [ˌɪnɪˈfɪʃnt]
+    - adj. 效率低的
+    - The whole system is **inefficient** and corrupt.
     - inefficiency n. 低效率
-    - inefficient
-        - adj. 效率低的
-        - The whole system is inefficient and corrupt.
-- confer
+    - ineffectiveness [ˌɪnɪ'fektɪvnəs] n. 无效
+- confer [kənˈfɜːr]
     - vt. 授予
+    - vi. 商讨
+    - confer a degree
+    - conference
+        - n. 会议（正式，大型）
 - unwilling
     - adj. 不愿意的
     - be unwilling to do sth.
 - uncommon
     - adj. 不常见的
-    - not uncommon 常见，并不少见的
-        - == common
-        - It is not uncommon for college students to live at home.
-    - You can't be common,the common man goes nowhere;you have to be uncommon.
-- probe
+    - common
+        - adj. 常见的；普通的；共同的
+        - n. 共同
+        - == not uncommon 常见，并不少见的
+        - It is not **uncommon** for college students to live at home.
+    - You can't be **common**, the **common** man goes nowhere; you have to be **uncommon**.
+- probe [proʊb]
     - v. 调查
-- multilingual
+- multilingual [ˌmʌltiˈlɪŋɡwəl]
     - adj. 会说多种语言
 - costless
     - adj. 不花钱的
 
+## 057
+
+- unstoppable
+    - adj. 无法遏止的
+- federation
+    - n. 联盟
+    - federal government 联邦政府
+- mechanization [ˌmɛkənəˈzeʃən]
+    - n. 机械化
+    - automation [ˌɔːtəˈmeɪʃn] n. 自动化
+- mobility [moʊˈbɪləti]
+    - n. 流动性
+    - mobile phone 手机
+- intangible [ɪnˈtændʒəbl]
+    - adj. 无形的；难以理解的
+    - == nonphysical
+    - The old building had an **intangible** air of sadness about it.
+    - tangible
+        - adj. 有形的
+        - == physical adj. 实物的；外在的；物理的；身体的
+- savagely [ˈsævɪdʒlɪ]
+    - adv. 野蛮的
+- constractor
+    - n. 承包商
+- constractual
+    - adj. 合同的
+    - contract n. 合同
+- tentative
+    - adj. 不确定的；犹豫的
+    - == uncertain adj. 犹豫; 多变的; 不确定的; 未知的; 迟疑的
+    - I'm taking the first **tentative** steps towards fitness.
+
+## 058
+
+- domestically [də'mestɪklɪ]
+    - adv. 国内的
+- complement
+    - vt. 补足
+    - n. 补充
+    - complementary adj. 补充的
+- agreeable [əˈɡriːəbl] 🙂
+    - adj. 令人愉快的；可以接受的
+    - == pleasant adj. 愉悦的
+    - disagreeable adj. 令人讨厌的
+- broadcast [ˈbrɔːdkæst]
+    - v. 广播
+- redirect [ˌridɪˈrɛkt]
+    - vt. 使改变用途
+    - redirection n. 转移
+- dampen [ˈdæmpən]
+    - vt. 抑制
+    - == restrain vt. 抑制
+    - == curb vt. 抑制，控制 n. 限制，控制；路源；勒马绳
+    - She wasn't going to let anything **dampen** her spirits today.
+    - dampen our moods 抑制我们的情绪
+- veto [ˈviːtoʊ]
+    - vt. 否决
+    - vote
+        - v. 投票
+        - n. 投票
+- precedent [ˈpresɪdənt]
+    - n. 先例
+    - They were determined to break from **precedent**.
+    - precede vt. 在...之前发生或存在
+
+## 059
+
+- expressly [ɪkˈsprɛslɪ]
+    - adv. 明确地
+    - express
+        - vt. 表达
+        - n. 快递服务
+        - adj. 明确的；特快的
+- spy
+    - n. 间谍
+- immensely [ɪˈmensli]
+    - adv. 非常
+    - immense [ɪˈmens] adj. 巨大的
+- robust [roʊˈbʌst] 🙂
+    - adj. 强大的
+    - ...who offered an even more **robust** defense of state privileges going back to the Alien and Sedition Acts.
+        - privilege [ˈprɪvəlɪdʒ]
+            - vt. 给予特权
+            - n. 特权；特殊待遇
+        - go back to 在历史、思想或制度层面上“追溯其源头”
+- luxuriant [lʌɡˈʒʊriənt]
+    - adj. 丰富的
+- developer
+    - n. （新产品等的）开发者
+    - undeveloped adj. 未开发的
+- scandal [ˈskændl]
+    - n. 丑闻
+- sensitiveness
+    - n. 灵敏度；敏感
+- enthusiastically
+    - adv. 热情地
+
+## 060
+
+- suggestive
+    - adj. 使人想起...的
+    - suggest vt. 表明；暗示；建议
+- necessitate [nəˈsesəteɪt]
+    - vt. 使成为必需
+    - necessary adj. 必要的
+- unaccountably [ˌʌnəˈkaʊntəblɪ]
+    - adv. 无法解释地；莫名其妙地
+    - He has been **unaccountably** delayed. 他被莫名其妙地耽误了
+- intrude [ɪnˈtruːd]
+    - vi. 侵扰
+    - intrude on the federal's privileged powers 侵犯联邦政府的特权
+        - intrude on 侵犯
+    - Do you feel *anxious([ˈæŋkʃəs])* when unforeseen incidents **intrude** on your day?
+        - unforeseen [ˌʌnfɔːrˈsiːn] adj. 意外的
+    - intrusion n. 侵占
+    - intrusive adj. 烦扰的
+    - intrusiveness n. 侵扰性
+- compact
+    - n. 协定
+- adolescence [ˌædəˈlesns]
+    - n. 青春（期）
+- surplus [ˈsɜːrplʌs]
+    - adj. 剩余的
+    - n. 剩余；多余
+    - == excess adj. 超额的 n. 过量
+
 ## Words
+
+- perspective [pərˈspektɪv]
+    - n. (观察问题的)视角，观点
+- barrier
+    - n. 障碍
+- tolerate [ˈtɑːləreɪt]
+    - vt. 容忍
+- charming
+    - adj. 令人着迷的; 可爱的
+- undermine
+    - vt. 逐渐削弱（信心、权威等）
+- loyalty [ˈlɔɪəlti]
+    - n. 忠诚
+- courtesy [ˈkɜːrtəsi]
+    - n. 礼貌; 客气话; 尊称
+    - adj. （服务）免费的; 礼节性的
+- incompetence
+    - n. 无能力
 
 ## 词组
 
+- stand in favor of 支持/赞成
+    - == be in favor of
+    - == rule in favor of
+    - == come out in favor of
+
 ## 句式
+
+- Cease to struggle and you cease to live. 生命不息，奋斗不止
+    - cease [siːs] v. 停止; 终止
