--- a/english/word/low-frequency/061-066.md
+++ b/english/word/low-frequency/061-066.md
@@ -1,4 +1,4 @@
-# 057-064
+# 061-066
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,117 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 057
-
-- unstoppable
-    - adj. 无法遏止的
-- federation
-    - n. 联盟
-    - federal government 联邦政府
-    - state 州
-- mechanization
-    - n. 机械化
-    - automation 自动化
-- mobility
-    - n. 流动性
-    - mobile phone 手机
-- intangible
-    - adj. 无形的
-    - == nonphysical
-    - The old building had an intangible air of sadness about it.
-    - tangible 可触达的，有形的
-- savagely
-    - adv. 野蛮的
-- constractor
-    - n. 承包商
-    - constractual adj. 合同的
-        - contract n. 合同
-- tangible
-    - adj. 有形的
-- tentative
-    - adj. 不确定的
-    - == uncertain
-    - I'm taking the first tentative steps towaeds fitness.
-
-## 058
-
-- domestically
-    - adv. 国内的
-- complement
-    - vt. 补足
-    - complementary adj. 补充的，互补的
-- agreeable
-    - adj. 可以接受的；**令人愉快的**
-    - == pleasant
-    - disagreeable adj. 令人讨厌的
-- broadcast
-    - v. 广播
-- redirect
-    - vt. 使改变用途
-    - redirection n. 转移
-- dampen
-    - vt. 抑制
-    - == restrain == curb
-    - She wasn't going to let anything dampen her spirits today.
-    - dampen our moods 抑制我们的情绪
-- veto
-    - vt. 否决
-    - vote 投票
-- precedent
-    - n. 先例
-    - They were determined to break from precedent.
-    - precede v. 领先
-
-## 059
-
-- expressly
-    - adv. 明确地
-    - express v. 表达； adj. 特快的； n. 快递
-- spy
-    - n. 间谍
-- immensely
-    - adv. 非常
-    - immense
-- **robust** 🙂
-    - adj. 强大的
-- luxuriant
-    - adj. 丰富的
-- developer
-    - n. （新产品等的）开发者
-    - undeveloped adj. 未开发的
-- scandal
-    - n. 丑闻
-- sensitiveness
-    - n. 灵敏度；敏感
-- enthusiastically
-    - adv. 热情地
-
-## 060
-
-- suggestive
-    - adj. 使人想起...的
-- necessitate
-    - vt. 使成为必需
-    - necessary adj. 必要的
-- unaccountably
-    - adv. 无法解释地
-    - He has been unaccountably delayed.
-- intrude [ɪnˈtruːd]
-    - vi. 侵扰
-    - intrude on 侵犯
-    - intrude on the federal's privileged powers 侵犯联邦政府的特权
-    - Do you feel anxious when unforeseen incidents **intrude** on your day？
-    - intrusion n. 侵占
-    - intrusive adj. 烦扰的
-    - intrusiveness n. 侵扰性
-- compact
-    - n. 协定
-- adolescence
-    - n. 青春（期）
-- surplus
-    - adj. 剩余的
-    - == excess
 
 ## 061
 
@@ -182,7 +71,8 @@
     - adj. 使人上瘾的
 - formidable
     - adj. 令人敬畏的
-    - Even Tommasini，who had advocated Cilbert's appointment in the Times,calls him "an unpretentious musician with no air of the formidable conductor about him."
+    - Even Tommasini，who had advocated Cilbert's appointment in the Times,calls him "an unpretentious musician with no
+      air of the formidable conductor about him."
 - demoralization
     - n. 士气低落
     - moral 道德的
@@ -228,6 +118,62 @@
     - n. 坚贞
 - masculine
     - adj. 男子气概的
+
+## 065
+
+- capability
+    - n. 能力
+    - capable adj.
+        - be capable to do sth.
+    - == ability
+- uniformly
+    - adv. 一致地
+    - uniformity n. 一致（性）
+    - uniform n. 校服，制服
+        - uniform rule 统一的规则
+- credential
+    - n. 证明书
+- dramatist
+    - n. 剧作家
+- upside
+    - n. （不利局面中）好的方面
+    - The upside is the possibilities contained in knowing that <ins>everything is up to us. (一切取决于我们)</ins>
+    - downside
+- crust
+    - n. （糕饼的）酥皮
+- beverage
+    - n. 饮料
+- livestock
+    - n. 牲畜
+- goallessness
+    - n. 无目标
+
+## 066
+
+- newborn
+    - adj. 初生的
+- proficient
+    - adj. 精通的
+    - be proficient in sth. 精通某事
+    - When you serve your passions，proficiency gradually takes over and becomes habitual.
+    - The children of immigrants tend to be bilingual and proficient in English. 精通英语
+- boot
+    - v. 启动
+    - boot up 启动
+- scent
+    - n. 气味
+- eminent
+    - adj. 杰出的
+    - == prominent
+- dynamism
+    - n. 活力
+    - dynamic n. 动态
+- worktable
+    - n. 工作台
+- workstation
+    - n. 工作站
+- feverish
+    - adj. 狂热的
 
 ## Words
 
