--- a/english/word/low-frequency/067-072.md
+++ b/english/word/low-frequency/067-072.md
@@ -1,4 +1,4 @@
-# 065-072
+# 067-072
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,62 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 065
-
-- capability
-    - n. 能力
-    - capable adj.
-        - be capable to do sth.
-    - == ability
-- uniformly
-    - adv. 一致地
-    - uniformity n. 一致（性）
-    - uniform n. 校服，制服
-        - uniform rule 统一的规则
-- credential
-    - n. 证明书
-- dramatist
-    - n. 剧作家
-- upside
-    - n. （不利局面中）好的方面
-    - The upside is the possibilities contained in knowing that <ins>everything is up to us. (一切取决于我们)</ins>
-    - downside
-- crust
-    - n. （糕饼的）酥皮
-- beverage
-    - n. 饮料
-- livestock
-    - n. 牲畜
-- goallessness
-    - n. 无目标
-
-## 066
-
-- newborn
-    - adj. 初生的
-- proficient
-    - adj. 精通的
-    - be proficient in sth. 精通某事
-    - When you  serve your passions，proficiency gradually takes over and becomes habitual.
-    - The children of immigrants tend to be bilingual and proficient in English. 精通英语
-- boot
-    - v. 启动
-    - boot up 启动
-- scent
-    - n. 气味
-- eminent
-    - adj. 杰出的
-    - == prominent
-- dynamism
-    - n. 活力
-    - dynamic n. 动态
-- worktable
-    - n. 工作台
-- workstation
-    - n. 工作站
-- feverish
-    - adj. 狂热的
 
 ## 067
 
@@ -119,7 +63,8 @@
     - n. 抵抗
 - preach
     - v. 布道
-    - Although nowadays people in mounting numbers talk about the need to be unselfish,we see very few people practice what they preach. 尽管现在越来越多的人谈论无私的必要性，但我们看到很少有人言行一致。
+    - Although nowadays people in mounting numbers talk about the need to be unselfish,we see very few people practice
+      what they preach. 尽管现在越来越多的人谈论无私的必要性，但我们看到很少有人言行一致。
 - indirectly
     - adv. 间接地
 
@@ -199,7 +144,8 @@
     - vt. 朗诵
 - devise
     - vt. 设计
-    - Since the <ins>dawn (黎明，破晓，...刚出现的时候)</ins> of human ingenuity，people have devised ever more <ins>cunning tools (狡猾的工具)</ins> to cope with work that is dangerous，boring，burdensome，or just plain nasty.
+    - Since the <ins>dawn (黎明，破晓，...刚出现的时候)</ins> of human ingenuity，people have devised ever more <ins>
+      cunning tools (狡猾的工具)</ins> to cope with work that is dangerous，boring，burdensome，or just plain nasty.
 
 ## 072
 
