feat: update advanced mathematics

--- a/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_functions.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_functions.tex
@@ -129,15 +129,11 @@
         \begin{itemize}
             \item $f(x) + f(-x)$必是偶函数
             \item $f(x) - f(-x)$必是奇函数
-            \item 任意定义在关于原点对称区间上的函数，
-            都可以表示为一个奇函数与一个偶函数之和。
-
-            对任一函数 $f(x)$，定义
+            \item 任意定义在关于原点对称区间上的函数，都可以表示为一个奇函数与一个偶函数之和。对任一函数 $f(x)$，定义
             \[
                 u(x) = \frac{1}{2}\bigl[f(x) + f(-x)\bigr], \qquad
                 v(x) = \frac{1}{2}\bigl[f(x) - f(-x)\bigr].
             \]
-
             则有 $u(x)$ 是偶函数，$v(x)$ 是奇函数。并且
             \[
                 f(x)
@@ -145,7 +141,7 @@
                 + \frac{1}{2}\bigl[f(x) - f(-x)\bigr]
                 = u(x) + v(x).
             \]
-            \item $f[\psi(x)]$内偶则偶，内奇同外
+            \item $f[\varphi(x)]$内偶则偶，内奇同外
             \item $\color{red}{\bigstar}$求导一次，奇偶性互换
             \item 设对任意的$x, y$，都有$f(x + y) = f(x) + f(y)$，则$f(x)$是奇函数
             \item 常见的奇函数
@@ -153,7 +149,6 @@
                 \item $f(x) = \ln\displaystyle\frac{1-x}{1+x} = \ln(1-x) - \ln(1+x)$
                 \item $f(x) = \displaystyle\frac{1}{2^x + 1} - \frac{1}{2}$
             \end{enumerate}
-            \item 常见的偶函数
         \end{itemize}
         \item 反正弦函数 $y=\arcsin x$ 是函数
         \[
