--- a/math/advanced-mathematics/limits_and_continuity_of_functions/continuity_and_discontinuity_of_functions.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/continuity_and_discontinuity_of_functions.tex
@@ -76,7 +76,7 @@
         \item 连续性运算法则
         \begin{itemize}
             \item 两个函数如果在同一点$x_0$处连续，则它们的和差商积在这点也是连续的
-            \item 复合函数的连续性: 设$u=\psi(x)$在点$x = x_0$处连续，$y = f(u)$在点$u = u_0$处连续，且$u_0 = \psi(x_0)$，则$f[\psi(x)]$在点$x = x_0$处连续
+            \item 复合函数的连续性: 设$u=\varphi(x)$在点$x = x_0$处连续，$y = f(u)$在点$u = u_0$处连续，且$u_0 = \varphi(x_0)$，则$f[\varphi(x)]$在点$x = x_0$处连续
         \end{itemize}
     \end{enumerate}
 
