--- a/math/latex/guide.tex
+++ b/math/latex/guide.tex
@@ -217,20 +217,21 @@
     \subsection*{小写希腊字母}
     \begin{tabular}{c c c c c c}
         \hline
-        字母         & LaTeX           & 显示         & 字母       & LaTeX         & 显示       \\
+        字母         & LaTeX            & 显示         & 字母       & LaTeX         & 显示       \\
         \hline
-        $\alpha$   & \verb|\alpha|   & $\alpha$   & $\beta$  & \verb|\beta|  & $\beta$  \\
-        $\gamma$   & \verb|\gamma|   & $\gamma$   & $\delta$ & \verb|\delta| & $\delta$ \\
-        $\epsilon$ & \verb|\epsilon| & $\epsilon$ & $\zeta$  & \verb|\zeta|  & $\zeta$  \\
-        $\eta$     & \verb|\eta|     & $\eta$     & $\theta$ & \verb|\theta| & $\theta$ \\
-        $\iota$    & \verb|\iota|    & $\iota$    & $\kappa$ & \verb|\kappa| & $\kappa$ \\
-        $\lambda$  & \verb|\lambda|  & $\lambda$  & $\mu$    & \verb|\mu|    & $\mu$    \\
-        $\nu$      & \verb|\nu|      & $\nu$      & $\xi$    & \verb|\xi|    & $\xi$    \\
-        $\pi$      & \verb|\pi|      & $\pi$      & $\rho$   & \verb|\rho|   & $\rho$   \\
-        $\sigma$   & \verb|\sigma|   & $\sigma$   & $\tau$   & \verb|\tau|   & $\tau$   \\
-        $\upsilon$ & \verb|\upsilon| & $\upsilon$ & $\phi$   & \verb|\phi|   & $\phi$   \\
-        $\chi$     & \verb|\chi|     & $\chi$     & $\psi$   & \verb|\psi|   & $\psi$   \\
-        $\omega$   & \verb|\omega|   & $\omega$   &          &               &          \\
+        $\alpha$   & \verb|\alpha|    & $\alpha$   & $\beta$  & \verb|\beta|  & $\beta$  \\
+        $\gamma$   & \verb|\gamma|    & $\gamma$   & $\delta$ & \verb|\delta| & $\delta$ \\
+        $\epsilon$ & \verb|\epsilon|  & $\epsilon$ & $\zeta$  & \verb|\zeta|  & $\zeta$  \\
+        $\eta$     & \verb|\eta|      & $\eta$     & $\theta$ & \verb|\theta| & $\theta$ \\
+        $\iota$    & \verb|\iota|     & $\iota$    & $\kappa$ & \verb|\kappa| & $\kappa$ \\
+        $\lambda$  & \verb|\lambda|   & $\lambda$  & $\mu$    & \verb|\mu|    & $\mu$    \\
+        $\nu$      & \verb|\nu|       & $\nu$      & $\xi$    & \verb|\xi|    & $\xi$    \\
+        $\pi$      & \verb|\pi|       & $\pi$      & $\rho$   & \verb|\rho|   & $\rho$   \\
+        $\sigma$   & \verb|\sigma|    & $\sigma$   & $\tau$   & \verb|\tau|   & $\tau$   \\
+        $\upsilon$ & \verb|\upsilon|  & $\upsilon$ & $\phi$   & \verb|\phi|   & $\phi$   \\
+        $\chi$     & \verb|\chi|      & $\chi$     & $\psi$   & \verb|\psi|   & $\psi$   \\
+        $\omega$   & \verb|\omega|    & $\omega$   &          &               &          \\
+        $\varphi$  & \varphi|\varphi| & $\varphi$  &          &               &          \\
         \hline
     \end{tabular}
 
