--- a/math/advanced-mathematics/single-variable_differential_calculus/computation.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/computation.tex
@@ -113,11 +113,133 @@
 
     \begin{enumerate}
         \item $(u \pm v)' = u' \pm v'$
+        \item $d[u(x) \pm v(x)] = d[u(x)] \pm d[v(x)]$
 
         \item $(uv)' = u'v + uv'$
+        \item $d[u(x)v(x)] = u(x)d[v(x)] + v(x)d[u(x)]$
 
         \item $\left(\dfrac{u}{v}\right)'
         = \dfrac{u'v - uv'}{v^2}\qquad (v \neq 0)$
+        \item d$\left[\dfrac{u(x)}{v(x)}\right]
+        = \dfrac{v(x)d[u(x)] - u(x)d[v(x)]}{[v(x)]^2}\qquad v(x) \neq 0$
+    \end{enumerate}
+
+    \subsection{复合函数的导数与微分形式不变性}
+
+    设$u = g(x)$在点$x$处可导，$y = f(u)$在点$u = g(x)$处可导，则
+    \begin{itemize}
+        \item $\{f[g(x)]\}' = f'[g(x)]g'(x)$
+        \item $d\{f[g(x)]\} = f'[g(x)]g'(x)dx = f'[g(x)]d[g(x)]$
+    \end{itemize}
+
+    \subsection{分段函数的导数}
+
+    设
+    \[
+        f(x)=
+        \begin{cases}
+            f_1(x), & x \ge x_0,\\
+            f_2(x), & x < x_0,
+        \end{cases}
+    \]
+    其中 $f_1(x)$、$f_2(x)$ 分别在 $x>x_0$ 与 $x<x_0$ 时可导，则：
+
+    \begin{circlenum}
+        \item 在分段点 $x_0$ 处，用导数定义求导：
+        \[
+            f_+'(x_0)=\lim_{x\to x_0^+}\frac{f_1(x)-f(x_0)}{x-x_0},\qquad
+            f_-'(x_0)=\lim_{x\to x_0^-}\frac{f_2(x)-f(x_0)}{x-x_0}.
+        \]
+        根据 $f_+'(x_0)$ 是否等于 $f_-'(x_0)$ 来判定 $f'(x_0)$
+
+        \item 在非分段点用导数公式求导：
+        \[
+            \begin{cases}
+                x>x_0,\quad f'(x)=f_1'(x),\\
+                x<x_0,\quad f'(x)=f_2'(x).
+            \end{cases}
+        \]
+    \end{circlenum}
+
+    \subsection{反函数的导数}
+
+    \begin{enumerate}
+        \item 设 $y=f(x)$ 为单调且可导函数，并且 $f'(x)\neq 0$，
+        则存在反函数 $x=\varphi(y)$，且
+        \[
+            \frac{dx}{dy}
+            =
+            \frac{1}{\dfrac{dy}{dx}}
+            =
+            \frac{1}{f'(x)},
+        \]
+        即
+        \[
+            \varphi'(y)=\frac{1}{f'(x)}.
+        \]
+        \item $y = f(x), x = \varphi (y), \varphi'(y) = -\displaystyle\frac{f''(x)}{[f'(x)]^3}$
+        \item $y''_{xx} = -\displaystyle\frac{x''_{yy}}{(x'_y)^3}$
+        \item $x''_{yy} = -\displaystyle\frac{y''_{xx}}{(y'_x)^3}$
+    \end{enumerate}
+
+    \subsection{隐函数求导法}
+
+    设函数$y = f(x)$是由方程$F(x, y) = 0$确定的可导函数，则
+    \begin{circlenum}
+        \item 方程$F(x, y) = 0$两边对自变量$x$求导，注意$y = y(x)$，即将$y$看作中间变量，得到一个关于$y'$的方程
+        \item 解该方程便可求出$y'$
+    \end{circlenum}
+
+    \subsection{参数方程所确定的函数的导数}
+
+    设函数 $y=y(x)$ 由参数方程
+    \[
+        \begin{cases}
+            x=\varphi(t),\\
+            y=\psi(t)
+        \end{cases}
+    \]
+    所确定，其中 $t$ 为参数，且 $\varphi(t)$、$\psi(t)$ 均可导，
+    并且 $\varphi'(t)\neq 0$，则
+
+    \[
+        \frac{dy}{dx}
+        =
+        \frac{\dfrac{dy}{dt}}{\dfrac{dx}{dt}}
+        =
+        \frac{\psi'(t)}{\varphi'(t)}.
+    \]
+
+    \subsection{对数求导法}
+
+    对于\textbf{多项相乘、相除、开方、乘方}的式子，一般\textbf{先取对数再求导}。设 $y=f(x)$（其中 $f(x)>0$），则
+    \begin{circlenum}
+        \item 等式两边取自然对数，得
+        \[
+            \ln y = \ln f(x).
+        \]
+
+        \item 两边对自变量 $x$ 求导（注意 $y=y(x)$，将 $y$ 视为中间变量），得
+        \[
+            \frac{1}{y}\,y' = [\ln f(x)]'.
+        \]
+        因此
+        \[
+            y' = y\,\frac{f'(x)}{f(x)}.
+        \]
+    \end{circlenum}
+
+    \subsection{幂指函数求导法}
+
+    对于$u(x)^{v(x)}(u(x) > 0, \text{且}u(x) \neq 1)$，除了用上面的对数求导法，还可以先化成指数函数
+    \[
+        u(x)^{v(x)} = e^{v(x)\ln u(x)}
+    \]
+    然后求导
+
+    \subsection{\textcolor{red}{$\bigstar$} 高阶导数}
+    \begin{enumerate}
+        \item 归纳法：逐次求导，探索规律，得出通式
     \end{enumerate}
 
     \subsection{基础概念}
@@ -144,7 +266,9 @@
     \subsection{公式}
 
     \begin{enumerate}
-
+        \item $[\ln(x + \sqrt {x^2 + a^2})]' = \displaystyle\frac{1}{\sqrt {x^2 + a^2}}$
+        \item $(x\ln x)' = \ln x + 1$
+        \item $(\displaystyle\frac{1}{x} \ln x)' = -\displaystyle\frac{1}{x^2} \ln x + \frac{1}{x^2}$
     \end{enumerate}
 
     \subsection{方法总结}
