--- a/english/word/low-frequency/037-042.md
+++ b/english/word/low-frequency/037-042.md
@@ -166,7 +166,7 @@
     - n. 拿走
 - fuss
     - vi. 过分关心（小事）
-    - fuss over
+    - fuss over sb./sth. 对...过分操心；过度关注；小题大做式地照顾
     - It was all a **fuss** about nothing. 这完全是无谓的自寻烦恼
     - Do all the good you can and make as little **fuss** about it as possible. 尽你所能去行善，但尽量不要张扬
 - tissue [ˈtɪʃuː]
