--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -73,7 +73,7 @@
     - v. 卷，卷曲
     - The cat curled into a ball and went to sleep.
     - curve
-- **lame**
+- lame
     - adj. 跛的，瘸的，站不住脚的，蹩脚的
     - 站不住脚的
         - They should start by discarding California's lame argument.
