refactor: review-0121.html

--- a/english/word/low-frequency/055-060.md
+++ b/english/word/low-frequency/055-060.md
@@ -104,7 +104,6 @@
     - automation [ˌɔːtəˈmeɪʃn] n. 自动化
 - mobility [moʊˈbɪləti]
     - n. 流动性
-    - mobile phone 手机
 - intangible [ɪnˈtændʒəbl]
     - adj. 无形的；难以理解的
     - == nonphysical
@@ -144,7 +143,9 @@
 - dampen [ˈdæmpən]
     - vt. 抑制
     - == restrain vt. 抑制
-    - == curb vt. 抑制，控制 n. 限制，控制；路源；勒马绳
+    - == curb
+        - vt. 抑制，控制
+        - n. 限制，控制；路源；勒马绳
     - She wasn't going to let anything **dampen** her spirits today.
     - dampen our moods 抑制我们的情绪
 - veto [ˈviːtoʊ]
@@ -216,7 +217,9 @@
 - surplus [ˈsɜːrplʌs]
     - adj. 剩余的
     - n. 剩余；多余
-    - == excess adj. 超额的 n. 过量
+    - == excess
+        - adj. 超额的
+        - n. 过量
 
 ## Words
 
