--- a/english/word/low-frequency/061-066.md
+++ b/english/word/low-frequency/061-066.md
@@ -32,9 +32,10 @@
     - n. 动画片
 - banqueting
     - adj. 宴会的
+    - banquet [ˈbæŋkwɪt] n. 宴会，盛宴
 - darkness
     - n. 黑暗
-    - Nicholas Nickleby，his next novel，combines the darkness of Oliver Twist with the sunlight of Pickwick.
+    - Nicholas Nickleby, his next novel, combines the **darkness** of Oliver Twist with the sunlight of Pickwick.
 - nerve
     - n. 勇气
     - have the nerve to do sth. 有勇气做某事
@@ -48,9 +49,11 @@
     - millennial n. 千禧一代（1982-1995）
 - observatory
     - n. 天文台
+    - *Protests(n. 抗议)* have erupted over construction of the Thirty Meter Telescope(TMT), a giant **observatory**
+      that promises to revolutionize humanity's view of the cosmos.
     - observable adj. 能观察到的
-    - observe v. 观察
-- encyclop(a)edia
+    - observe - vt. 观察；注意到
+- encyclopedia
     - n. 百科全书
 - selectively
     - adv. 有选择地
@@ -58,7 +61,7 @@
     - vt. 放大
 - unremarked
     - adj. 没有引人关注的
-    - ...how could she have let those enormous bonus payouts pass unremarked？
+    - ...how could she have let those enormous bonus payouts pass **unremarked**?
         - let sb. do sth.
 - destination
     - n. 目的地
@@ -71,37 +74,40 @@
     - adj. 使人上瘾的
 - formidable
     - adj. 令人敬畏的
-    - Even Tommasini，who had advocated Cilbert's appointment in the Times,calls him "an unpretentious musician with no
-      air of the formidable conductor about him."
+    - Even Tommasini, who had advocated Cilbert's appointment in the Times, calls him "an unpretentious musician with no
+      air of the **formidable** conductor about him."
 - demoralization
     - n. 士气低落
-    - moral 道德的
+    - moral [ˈmɔːrəl]
+        - adj. 道德的
+        - n. 寓意
 - thoughtless
     - adj. 粗心大意的
-    - == inconsiderate
+    - == inconsiderate adj. 不替别人着想的; 不体谅别人的; 轻率的; 考虑不周的
 - simulate
     - vt. 模仿
     - simulation n. 模拟
 - citizenry
     - n. 全体市民（或公民）
     - citizenship n. 公民身份
-- archieve
+- archive
     - n. 档案室
 - earnestness
     - n. 认真
-    - == sincerity
+    - == sincerity [sɪn'serəti] n. 真挚，诚心诚意，诚意; 笃实; 襟怀坦白
 
 ## 064
 
 - companionship
     - n. 友谊
-    - I depended on his companionship and on his judgement.
+    - I depended on his **companionship** and on his judgement.
     - companion n. 陪伴
 - slowdown
     - n. 放缓
 - ornament
     - n. 装饰
-    - The building is an ornament to the city.
+    - == decoration n. 装饰
+    - The building is an **ornament** to the city. 这座建筑物为整个城市增色不少
 - signify
     - vt. 代表
 - parcel
@@ -109,13 +115,14 @@
     - part and parcel of ...的重要部分
 - amiable
     - adj. 和蔼可亲的
-    - == cordial 礼貌的，彬彬有礼的
+    - == cordial [ˈkɔːrdʒəl] adj. 友好的，可亲的
 - editorial
     - n. （报纸的）社论
-- restort
-    - vi. 采取； n. 度假胜地
+- resort
+    - vi. 采取
+    - n. 度假胜地
 - constancy
-    - n. 坚贞
+    - n. 坚贞；始终如一
 - masculine
     - adj. 男子气概的
 
@@ -123,13 +130,16 @@
 
 - capability
     - n. 能力
-    - capable adj.
+    - capable [ˈkeɪpəbl]
+        - adj. 有能力的
         - be capable to do sth.
-    - == ability
+    - == ability n. 能力
 - uniformly
     - adv. 一致地
     - uniformity n. 一致（性）
-    - uniform n. 校服，制服
+    - uniform
+        - n. 制服
+        - adj. 统一的
         - uniform rule 统一的规则
 - credential
     - n. 证明书
@@ -137,8 +147,10 @@
     - n. 剧作家
 - upside
     - n. （不利局面中）好的方面
-    - The upside is the possibilities contained in knowing that <ins>everything is up to us. (一切取决于我们)</ins>
-    - downside
+    - Looking for the upside in Challenging Times.
+    - The **upside** is the possibilities contained in knowing that everything is up to us.
+        - // TODO be up to sb. 一切取决于某人
+    - downside n. 不利的一面
 - crust
     - n. （糕饼的）酥皮
 - beverage
@@ -155,16 +167,21 @@
 - proficient
     - adj. 精通的
     - be proficient in sth. 精通某事
-    - When you serve your passions，proficiency gradually takes over and becomes habitual.
-    - The children of immigrants tend to be bilingual and proficient in English. 精通英语
+    - The children of immigrants tend to be bilingual and **proficient** in English.
+    - proficiency [prəˈfɪʃnsi]
+        - n. 熟练，精通，娴熟
+        - When you serve your passions, **proficiency** gradually takes over and becomes habitual.
 - boot
     - v. 启动
-    - boot up 启动
+    - All I have to do is to go t omy CD shelf, or **boot** up my computer and download still more recorded music from
+      iTunes.
+        - boot up 启动
 - scent
+    - vt. 闻到
     - n. 气味
 - eminent
     - adj. 杰出的
-    - == prominent
+    - == prominent [ˈprɑːmɪnənt] adj. 杰出的；显著的
 - dynamism
     - n. 活力
     - dynamic n. 动态
@@ -174,14 +191,24 @@
     - n. 工作站
 - feverish
     - adj. 狂热的
+    - fever [ˈfiːvər] n. 发烧，热度；一时的狂热
 
 ## Words
 
-- hypocritic
-    - adj. 伪善的
+- hypocritical [ˌhɪpəˈkrɪtɪkəl]
+    - adj. 伪善的; 虚伪的; 伪善者的; 言不由衷的
+- tolerance [ˈtɑːlərəns]
+    - n. 宽容；忍耐力
+- elegance
+    - n. 优雅
 - idleness
     - v. 懒
     - == lazy
+- trivial [ˈtrɪviəl]
+    - adj. 不重要的，琐碎的
+- notable [ˈnoʊtəbl]
+    - adj. 值得注意的; 显著的; 著名的
+    - n. 名人; 显要人物
 
 ## 词组
 
